Implemented auth, jwt token, identity controller and service, cleanup and restructuring

--- a/DataManager/appsettings.json
+++ b/DataManager/appsettings.json
@@ -7,6 +7,10 @@
         "Description": "My API",
         "UiEndpoint": "v1/swagger.json"
     },
+    "JwtSettings": {
+        "Secret": "11111111112222222222333333333312",
+        "TokenLifetime": "12:00:00"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
