Cleanup, dependency injection

--- a/DataManager/appsettings.json
+++ b/DataManager/appsettings.json
@@ -1,6 +1,7 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-DataManager-DEB48817-E9B6-4059-B009-3E6A92DE2EFF;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-DataManager-DEB48817-E9B6-4059-B009-3E6A92DE2EFF;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=DataProject;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False"
     },
     "SwaggerOptions": {
         "JsonRoute": "swagger/{documentName}/swagger.json",
